--- a/TaxRates/TaxRates.csproj
+++ b/TaxRates/TaxRates.csproj
@@ -24,10 +24,13 @@
     <Content Include="..\Data\TaxRates.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="..\Data\goat.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Visible>false</Visible>
-    </Content>
+	  <Content Include="..\Data\Icons\Limsa.png" Link="Icons\Limsa.png" CopyToOutputDirectory="Always" />
+	  <Content Include="..\Data\Icons\Gridania.png" Link="Icons\Gridania.png" CopyToOutputDirectory="Always" />
+	  <Content Include="..\Data\Icons\Ul'dah.png" Link="Icons\Ul'dah.png" CopyToOutputDirectory="Always" />
+	  <Content Include="..\Data\Icons\Ishgard.png" Link="Icons\Ishgard.png" CopyToOutputDirectory="Always" />
+	  <Content Include="..\Data\Icons\Crystarium.png" Link="Icons\Crystarium.png" CopyToOutputDirectory="Always" />
+	  <Content Include="..\Data\Icons\Kugane.png" Link="Icons\Kugane.png" CopyToOutputDirectory="Always" />
+	  <Content Include="..\Data\Icons\Old Sharlayan.png" Link="Icons\Old Sharlayan.png" CopyToOutputDirectory="Always" />
   </ItemGroup>
 
   <PropertyGroup>
